maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: '=' expected but ',' found.
def posi():Integer,Integer{
                  ^JediEscaper:17: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^