maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run(){
  posi()
}
def posi():Integer,Integer{
  for (x<-0 to getMondeLargeur()-1){
  	for (y<-0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)==true){
        return x,y
      }
    }
  }
}